# diffrax

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  schrodinger1D.py  setup.py
.github/workflows/: release.yml  run_tests.yaml  run_tests.yml
benchmarks/: README.md  against_scan.py  brownian_tree_times.py  compile_times.py  jump_step_timing.py  lotka_volterra.py  old_pid_controller.py  scan_stages.py  scan_stages_cnf.py  small_neural_ode.py  stateful_paths.py
devdocs/: predictor_dirk.md
diffeqx/: __init__.py  custom_types.py  integrate.py  interpolation.py  misc.py  path.py  saveat.py  solution.py  step_size_controller.py  term.py  tree.py
diffeqx/brownian/: base.py  interval.py
diffeqx/solver/: __init__.py  base.py  euler.py
diffrax/: __init__.py  _ad.py  _adjoint.py  _autocitation.py  _custom_types.py  _delays.py  _event.py  _global_interpolation.py  _heuristics.py  _integrate.py  _kl_term.py  _local_interpolation.py  _misc.py  _path.py  _progress_bar.py  _progress_meter.py  _saveat.py  _solution.py  _term.py  _typing.py  ad.py  adjoint.py  autocitation.py  autojit.py  bounded_while_loop.py  custom_types.py  event.py  extras.py  global_interpolation.py  heuristics.py  integrate.py  interpolation.py  local_interpolation.py  misc.py  path.py  saveat.py  solution.py  step_size_controller.py  term.py  test.py  (+2 more)
diffrax.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
diffrax/_brownian/: __init__.py  base.py  path.py  tree.py
diffrax/_nonlinear_solver/: affine.py  base.py  newton.py
diffrax/_root_finder/: __init__.py  _verychord.py  _with_tols.py
diffrax/_solver/: __init__.py  alexander2.py  align.py  base.py  bosh3.py  dopri5.py  dopri8.py  euler.py  euler_heun.py  exp_euler.py  foster_langevin_srk.py  heun.py  implicit_euler.py  kencarp3.py  kencarp4.py  kencarp5.py  kl.py  kvaerno3.py  kvaerno4.py  kvaerno5.py  langevin_srk.py  leapfrog_midpoint.py  midpoint.py  milstein.py  quicsort.py  ralston.py  reversible.py  reversible_heun.py  rodas4.py  rodas42.py  rodas5.py  rodas5p.py  rodas6p.py  ros3p.py  rosenbrock.py  runge_kutta.py  sea.py  semi_implicit_euler.py  shark.py  shark_general.py  (+10 more)
diffrax/_step_size_controller/: __init__.py  adaptive.py  adaptive_base.py  base.py  clip.py  constant.py  jump_step_wrapper.py  pid.py
diffrax/brownian/: __init__.py  base.py  interval.py  path.py  tree.py
diffrax/jax_tricks/: __init__.py  autojit.py  tree_dataclass.py  vmap_primitives.py
diffrax/misc/: __init__.py  ad.py  bounded_while_loop.py  cond.py  docs.py  errors.py  frozenarray.py  misc.py  nextafter.py  omega.py  ravel.py  refholder.py  sde_kl_divergence.py  static.py  unvmap.py  vmap.py  while_loop.py
diffrax/nonlinear_solver/: __init__.py  affine.py  base.py  newton.py
diffrax/solver/: __init__.py  base.py  bosh3.py  dopri5.py  dopri8.py  euler.py  euler_heun.py  fehlberg2.py  heun.py  implicit_euler.py  kencarp3.py  kencarp5.py  kvaerno3.py  kvaerno4.py  kvaerno5.py  leapfrog_midpoint.py  midpoint.py  milstein.py  ralston.py  rattle.py  reversible_heun.py  runge_kutta.py  semi_implicit_euler.py  sil3.py  stormer_verlet.py  tsit5.py
diffrax/step_size_controller/: __init__.py  adaptive.py  base.py  constant.py
docs/: .htaccess  acknowledgements.md  basic-examples.md  citation.md  faq.md  index.md  jax_tricks.md  requirements.txt
docs/_scripts/: setup_commands.py
docs/_static/: .README.md  custom_css.css  highlight.min.js
docs/api/: adjoints.md  autocitation.md  brownian.md  citation.md  delays.md  diffeqsolve.md  events.md  interpolation.md  nonlinear_solver.md  path.md  progress_meter.md  saveat.md  solution.md  solver.md  stepsize_controller.md  terms.md  type_terminology.md  utils.md
docs/devdocs/: SDE_solver_table.md  adjoint_commutative_noise.md  bounded_while_loop.md  omega.md  predictor_dirk.md  srk_example.ipynb
docs/examples/: basic-examples.md  continuous_normalising_flow.ipynb  coupled_odes.ipynb  forcing.ipynb  hessian.ipynb  kalman_filter.ipynb  latent_ode.ipynb  latent_sde.ipynb  neural_cde.ipynb  neural_gru_ode.ipynb  neural_ode.ipynb  neural_sde.ipynb  (+6 more)
equinox/: __init__.py
examples/: continuous_normalising_flow.ipynb  continuous_normalising_flow.py  couette.ipynb  coupled_odes.ipynb  dde.ipynb  hessian.ipynb  kalman_filter.ipynb  langevin_example.ipynb  latent_ode.ipynb  latent_ode.py  latent_sde.ipynb  latent_sde_terms.ipynb  neural_cde.ipynb  neural_cde.py  neural_dde.ipynb  neural_ode.ipynb  neural_ode.py  neural_sde.ipynb  neural_sde.py  neural_sde_gan.ipynb  neural_sde_vae.ipynb  nonlinear_heat_pde.ipynb  sde_example.ipynb  sgd.py  steady_state.ipynb  stiff_ode.ipynb  stiff_ode.py  stochastic_gradient_descent.ipynb  stochastic_gradient_descent.py  symbolic_regression.ipynb  symbolic_regression.py  underdamped_langevin_example.ipynb  unit_aware_ode_solver.py
examples-with-units/: Navier-Stokes-2d.py  unit-aware-Navier-Stokes-2d.py  unit-aware-coupled_odes.py  unit-aware-precision-control.py  unit-aware-stiff-ode.py  unit_aware_couette.ipynb  unit_aware_nonlinear_heat_pde.py
optimistix/: __init__.py  _ad.py  _adjoint.py  _custom_types.py  _fixed_point.py  _iterate.py  _least_squares.py  _minimise.py  _misc.py  _root_find.py  _search.py  _solution.py
test/: __main__.py  conftest.py  helpers.py  requirements.txt  test_adaptive_stepsize_controller.py  test_adjoint.py  test_adjoint2.py  test_basic.py  test_bounded_while_loop.py  test_brownian.py  test_citation.py  test_delays.py  test_detest.py  test_event.py  test_exp_euler.py  test_global_interpolation.py  test_integrate.py  test_interpolation.py  test_langevin.py  test_levy_area.py  test_local_interpolation.py  test_misc.py  test_newton_solver.py  test_progress_bar.py  test_progress_meter.py  test_reversible.py  test_saveat_solution.py  test_sde.py  test_sde1.py  test_sde2.py  test_sde_kl_divergence.py  test_solver.py  test_step_to.py  test_step_to_location.py  test_stla.py  test_term.py  test_typing.py  test_underdamped_langevin.py  test_very_chord.py  test_vmap.py
(+49 files in other folders)
